src/modules/universal-discovery/components/content-meta-preview/css/content.meta.preview.component.css
.c-meta-preview {
    background: #fff;
    height: 100%;
    overflow-y: auto;
    padding: 10px;
    border-radius: 4px;
}

.c-meta-preview__wrapper {
    height: calc(100% - 32px);
}

.c-meta-preview__title {
    margin: 0;
    font-size: 16px;
    font-weight: 700;
    color: #515151;
    line-height: 32px;
}

.c-meta-preview__name {
    font-size: 16px;
    font-weight: 700;
    line-height: 20px;
    margin: 8px 0;
    word-break: break-all;
}

.c-meta-preview__content-type {
    margin: 0 auto 4px;
    font-size: 15px;
    color: #515151;
    line-height: 20px;
    display: flex;
    align-items: center;
    width: 190px;
    flex: 1 1 auto;
}

.c-meta-preview__image-wrapper {
    width: 190px;
    height: 190px;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    background: #e5e5e5;
    margin-bottom: 10px;
}

.c-meta-preview__image {
    display: block;
    max-width: 100%;
    width: auto;
    height: auto;
    max-height: 190px;
    margin: auto;
}

.c-meta-preview__meta-wrapper {
    width: 190px;
    margin: auto;
}

.c-meta-preview__icon {
    width: 16px;
    height: 16px;
    margin-right: 8px;
    fill: #646464;
}

.c-meta-preview__content-info {
    color: #333;
    line-height: 15px;
    font-size: 13px;
    padding: 0 10px 0 40px;
}

.c-meta-preview__content-info + .c-meta-preview__content-info {
    margin-top: 16px;
}

.c-meta-preview__subtitle {
    line-height: 15px;
    font-size: 13px;
    margin-bottom: 0;
}

.c-meta-preview__translation {
    display: block;
}

.c-meta-preview__top-wrapper {
    width: 190px;
    margin: auto;
    display: flex;
}

.c-meta-preview__content-bookmark {
    flex: 0 0 32px;
    height: 30px;
}

.c-meta-preview__content-bookmark .ez-add-to-bookmarks__icon-wrapper {
    padding: 0;
    cursor: pointer;
}

.c-meta-preview__content-bookmark .ez-add-to-bookmarks__icon-wrapper--add::after,
.c-meta-preview__content-bookmark .ez-add-to-bookmarks__icon-wrapper--remove::after {
    content: '';
    display: block;
    width: 32px;
    height: 32px;
    margin-top: -33px;
    margin-left: -4px;
    border-radius: 50%;

    animation-direction: normal;
    animation-iteration-count: 1;
    animation-play-state: running;
}

.c-meta-preview__content-bookmark .ez-add-to-bookmarks__icon-wrapper--add::after {
    background-color: transparent;
    animation: background-to-transparent 0.25s ease-in;
}

.c-meta-preview__content-bookmark .ez-add-to-bookmarks__icon-wrapper--remove::after {
    background-color: #f3f3f3;
    animation: background-to-base 0.25s ease-in;
}

.c-meta-preview__content-bookmark .ez-add-to-bookmarks__icon-wrapper--remove [class^='ez-icon'] {
    fill: #106d95;
}

.c-meta-preview__content-bookmark .ez-add-to-bookmarks__icon-wrapper--add [class^='ez-icon'] {
    fill: #106d95;
}

@keyframes background-to-base {
    0% {
        transform: scale(1);
        background-color: transparent;
    }
    50% {
        transform: scale(0.75);
        box-shadow: inset 10px 10px 10px 4px rgb(237, 237, 237, 0.1) inset -10px -10px 10px 4px rgba(237, 237, 237, 0.1),
            inset 10px -10px 10px 4px rgba(237, 237, 237, 0.1), inset -10px 10px 10px 4px rgba(237, 237, 237, 0.1);
        background-color: rgba(237, 237, 237, 0.1);
    }
    100% {
        transform: scale(1);
        background-color: #f3f3f3;
    }
}

